Feature image (#15)
* save => fixe front-end

* fix add exist product

* fix & refactor toList => collectors.toList() , isEmptu => !isPresent

* image in update omni

* fix nullPointerException in productMapper

* include description in search function