@@ -12,6 +12,7 @@ import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import javax.persistence.EntityNotFoundException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class OmnithequeService {
@@ -36,7 +37,8 @@ public class OmnithequeService {
         return mapper.entityToDto(omnitheque);
     }
     public List<OmnithequeDto> getAll(){
-        return repository.findAll().stream().map(mapper::entityToDto).toList();
+        return repository.findAll().stream().map(mapper::entityToDto).collect(Collectors.toList());
+
     }
 
     public OmnithequeDto create(OmnithequeForm form, Authentication auth){
@@ -60,6 +62,7 @@ public class OmnithequeService {
         if(form.getName() != null) toUpdate.setName(form.getName());
         if(form.getEmail() != null) toUpdate.setEmail(form.getEmail());
         if(form.getPhone() != null) toUpdate.setPhone(form.getPhone());
+        if(form.getImage() != null) toUpdate.setImage(form.getImage());
 
         if(form.getAddress() != null) {
             Address addressChecked = addressService.search(form.getAddress());
